--- a/pixelegg/less/jquery-ui.less
+++ b/pixelegg/less/jquery-ui.less
@@ -109,8 +109,9 @@ option:checked {background-color: @egw_color_1_e;}
 	background: @color_hint;
 	background-image: none;
 	color: @gray_0;
+	font-weight: normal;
 }
-
+.ui-state-focus.ui-menu-item a {color:@gray_10}
 .ui-state-hover,
 .ui-widget-content .ui-state-hover,
 .ui-widget-header .ui-state-hover{
